--- a/index.htm
+++ b/index.htm
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="{LOCALE}">
+<html lang="en">
 <head>
     <title>Black Pistol Barbershop</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1717937862009"></script>
-    <link rel="preload" href="locale/en.txt?v=1717937862009" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1717937862009" as="script"/>
-	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/r/2/0_0.jpg?v=1717937862009" as="image"/>
-	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/l/2/0_0.jpg?v=1717937862009" as="image"/>
-	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/u/2/0_0.jpg?v=1717937862009" as="image"/>
-	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/d/2/0_0.jpg?v=1717937862009" as="image"/>
-	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/f/2/0_0.jpg?v=1717937862009" as="image"/>
-	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/b/2/0_0.jpg?v=1717937862009" as="image"/>
+    <script src="lib/tdvplayer.js?v=1718184711775"></script>
+    <link rel="preload" href="locale/en.txt?v=1718184711775" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1718184711775" as="script"/>
+	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/r/2/0_0.jpg?v=1718184711775" as="image"/>
+	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/l/2/0_0.jpg?v=1718184711775" as="image"/>
+	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/u/2/0_0.jpg?v=1718184711775" as="image"/>
+	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/d/2/0_0.jpg?v=1718184711775" as="image"/>
+	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/f/2/0_0.jpg?v=1718184711775" as="image"/>
+	<link rel="preload" href="media/panorama_A3EDEFB0_AF4C_E66B_41BC_5956F4DC1E42_0/b/2/0_0.jpg?v=1718184711775" as="image"/>
+	<script>  window.gaDataLayer = window.gaDataLayer || [];  function gtag(){gaDataLayer.push(arguments);}  window.gtag = gtag;  gtag("js", new Date());  gtag("config", "G-X829JR1GFZ", {"anonymize_ip":true});</script>
 	<meta name="description" content="The best barbers in Neos Kosmos, Athens"/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="script.js?v=1717937862009"></script>
+    <script src="script.js?v=1718184711775"></script>
     <style type="text/css">
         html, body { height:100%; width:100%; height:100vh; width:100vw; margin:0; padding:0; overflow:hidden; }
         .fill-viewport { position:fixed; top:0; left:0; right:0; bottom:0; padding:0; margin:0; overflow: hidden; }
@@ -26,10 +27,11 @@
         #viewer { z-index:1; }
         #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,255,255,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1717937862009">
+    <link rel="stylesheet" href="fonts.css?v=1718184711775">
 </head>
 <body>
-    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; overflow: hidden; left: 0%; top: 50%; width: 100.00%; height: 10.00%" ><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:1.6666666666666663vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading virtual tour. Please wait...</SPAN></DIV></div></div></div>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDRHXVW7"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; overflow: hidden; left: 0%; top: 50%; width: 100.00%; height: 10.00%" ><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:1.6666666666666663vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading virtual tour. Please wait...</SPAN></DIV></div></div></div>
     <div id="viewer" class="fill-viewport"></div>
 </body>
 </html>
